--- a/Source/TreasureGuide.Web/src/custom-elements/stage-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-display.html
@@ -4,7 +4,7 @@
         ${stageId ? stage.name : 'Select Stage'}
     </button>
     <span if.bind="!editable">
-        <i class.bind="iconClass">${stage ? 'turned_in' : 'turned_in_not'</i>
-        ${stageId ? stage.name : 'Any Stage'}
+        <i class.bind="iconClass"></i>
+        ${stageId ? stage.name : 'Not Specified'}
     </span>
 </template>
