--- a/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
@@ -2,7 +2,7 @@
     <ux-dialog>
         <ux-dialog-header>
             <div class="right">
-                <a click.delegate="cancel()" md-button="flat: true;" class="modal-action">X</a>
+                <a click.delegate="cancel()" class="button _flat modal-action">X</a>
             </div>
             <h3>Select a Stage</h3>
         </ux-dialog-header>
