--- a/Source/TreasureGuide.Web/src/custom-elements/ship-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/ship-picker.html
@@ -1,26 +1,8 @@
 ﻿<template>
-    <ux-dialog>
-        <ux-dialog-header>
-            <div class="right">
-                <a click.delegate="cancel()" class="button _flat modal-action">X</a>
-            </div>
-            <h3>Select a Ship</h3>
-        </ux-dialog-header>
-        <ux-dialog-body>
-            <div class="row" if.bind="ships.length > 0">
-                <div class="collection">
-                    <a repeat.for="ship of ships" click.delegate="clicked(ship.id)" class="${'collection-item ' + (shipId === ship.id ? 'active' : '')}">
-                        <i class="circle material-icons primary-text left">directions_boat</i>
-                        <span class="title">${ship.name}</span>
-                    </a>
-                </div>
-            </div>
-            <div class="row center" if.bind="!ships || ships.length == 0">
-                <h3>Search yielded no results!</h3>
-            </div>
-        </ux-dialog-body>
-        <ux-dialog-footer>
-            <a click.delegate="cancel()" md-button="flat: true;" md-waves="color: accent;" class="modal-action">Cancel</a>
-        </ux-dialog-footer>
-    </ux-dialog>
+    <auto-complete items.bind="ships"
+                   limit="5"
+                   placeholder="Ship..."
+                   sort.bind="shipSort"
+                   label.bind="shipName">
+    </auto-complete>
 </template>
