Ship picker now hooked up.

--- a/Source/TreasureGuide.Web/src/custom-elements/ship-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/ship-picker.html
@@ -1,5 +1,6 @@
 ﻿<template>
     <auto-complete items.bind="ships"
+                   selected.two-way="ship"
                    limit="5"
                    placeholder="Ship..."
                    sort.bind="shipSort"
