--- a/Source/TreasureGuide.Web/src/custom-elements/team-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-display.html
@@ -1,6 +1,6 @@
 ﻿<template>
     <unit-display repeat.for="unit of teamSlots" unit-id.two-way="unit.unitId" editable.bind="editable"></unit-display>
-    <ship-display ship-id.bind="ship" editable.bind="editable"></ship-display>
+    <ship-display ship-id.two-way="ship" editable.bind="editable"></ship-display>
     <button if.bind="editable" class="_xsmall _active" click.delegate="openImport()">
         <i class="fa fa-cloud-download"></i>
         Import from OPTC-DB
