--- a/Source/TreasureGuide.Web/src/custom-elements/team-import.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-import.html
@@ -1,7 +1,7 @@
 ﻿<template>
     <ux-dialog>
         <ux-dialog-header>
-            <div class="right">
+            <div class="_floatRight">
                 <a click.delegate="cancel()" class="button _flat modal-action">X</a>
             </div>
             <h3>Import from optc-db</h3>
