Fixing lots of icons and selectors.

--- a/Source/TreasureGuide.Web/src/app.html
+++ b/Source/TreasureGuide.Web/src/app.html
@@ -29,7 +29,7 @@
                 </li>
                 <li class="-icon">
                     <a click.trigger="toggleDropdown()">
-                        <i class="fa fa-bars"></i>
+                        <i class="fa fa-fw fa-bars"></i>
                     </a>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
             Developed by <a href="http://robocafaz.com" target="_blank">RoboCafaz</a>
             <br />
             <a class="button _small _info" href="https://github.com/RoboCafaz/TreasureGuide">
-                <i class="fa fa-github"></i>View on GitHub
+                <i class="fa fa-fw fa-github"></i>View on GitHub
             </a>
             <br />
             Character, Stage, and Ship Data sourced from <a href="https://optc-db.github.io/" target="_blank">optc-db</a>
