--- a/Source/TreasureGuide.Web/src/custom-elements/team-import.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-import.html
@@ -11,7 +11,7 @@
                 <fieldset>
                     <legend>Import</legend>
                     <a href="http://optc-db.github.io/damage/#/" class="button _success _xlarge _width100" target="_blank">
-                        <i class="fa fa-external-link"></i>
+                        <i class="fa fa-fw fa-external-link"></i>
                         optc-db
                     </a>
                     Click the green "Export URL" button at the bottom of the calculator page and paste the code below.
