--- a/Source/TreasureGuide.Web/src/custom-elements/team-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-display.html
@@ -2,7 +2,7 @@
     <unit-display repeat.for="unit of teamSlots" unit-id.two-way="unit.unitId" editable.bind="editable"></unit-display>
     <ship-display ship-id.two-way="ship" editable.bind="editable"></ship-display>
     <button if.bind="editable" class="_xsmall _active" click.delegate="openImport()">
-        <i class="fa fa-cloud-download"></i>
+        <i class="fa fa-fw fa-cloud-download"></i>
         Import from OPTC-DB
     </button>
 </template>
