--- a/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="unit-collection">
                     <button class="unit-button" click.delegate="clicked(null)">
-                        <i class="fa fa-2x fa-user-times"></i>
+                        <i class="fa fa-fw fa-2x fa-user-times"></i>
                     </button>
                     <button repeat.for="unit of units" class="unit-button" click.delegate="clicked(unit.id)">
                         <img src.bind="getIcon(unit.id)">
