--- a/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
@@ -25,13 +25,10 @@
                     </div>
                 </form>
             </div>
-            <div class="row center" if.bind="pages > 1">
-                <md-pagination md-pages.bind="pages" md-active-page.bind="searchModel.page" md-on-page-changed.delegate="onPageChanged($event)"></md-pagination>
+            <div class="row">
+                <search-pager search-model.bind="searchModel" result-count.bind="resultCount"></search-pager>
             </div>
             <div class="row" if.bind="stages.length > 0">
-                <div class="center">
-                    <p>${((searchModel.page - 1) * searchModel.pageSize) +1} - ${((searchModel.page - 1) * searchModel.pageSize) + stages.length} of ${resultCount}</p>
-                </div>
                 <ul class="listnav">
                     <li class="${(!stageId ? 'active' : '')}">
                         <a href="#" click.delegate="clicked(null)">
