--- a/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
@@ -2,7 +2,8 @@
     <div class="_floatLeft" show.bind="hasPages">
         <aup-pagination current-page.bind="searchModel.page" page-size.bind="searchModel.pageSize" page-sizes.bind="pageSizes" total-items.bind="resultCount"></aup-pagination>
     </div>
-    <div class="_floatRight">
+    <div class="_floatRight" show.bind="hasResults">
         <p>${startIndex} - ${endIndex} of ${resultCount}</p>
     </div>
+    <h3 class="center" show.bind="!hasResults">Search yielded no results!</h3>
 </template>
