--- a/Source/TreasureGuide.Web/src/custom-elements/team-import.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-import.html
@@ -20,7 +20,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>Preview</legend>
-                    <div class="center">
+                    <div class="_alignCenter">
                         <team-display team.bind="team" ship.bind="ship"></team-display>
                     </div>
                 </fieldset>
