--- a/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
@@ -76,7 +76,7 @@
             <div class="row">
                 <search-pager search-model.bind="searchModel" result-count.bind="resultCount"></search-pager>
             </div>
-            <div class="row center">
+            <div class="row _alignCenter">
                 <div class="unit-collection">
                     <button class="unit-button" click.delegate="clicked(null)">
                         <i class="fa fa-fw fa-2x fa-user-times"></i>
