More css updates.

--- a/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/search-pager.html
@@ -5,5 +5,5 @@
     <div class="_floatRight" show.bind="hasResults">
         <p>${startIndex} - ${endIndex} of ${resultCount}</p>
     </div>
-    <h3 class="center" show.bind="!hasResults">Search yielded no results!</h3>
+    <h3 class="_alignCenter" show.bind="!hasResults">Search yielded no results!</h3>
 </template>
