--- a/Source/TreasureGuide.Web/src/custom-elements/stage-display.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-display.html
@@ -5,6 +5,6 @@
     </button>
     <span if.bind="!editable">
         <i class.bind="iconClass"></i>
-        ${stageId ? stage.name : 'Not Specified'}
+        ${stageId ? stage.name : 'Any Stage'}
     </span>
 </template>
