--- a/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/stage-picker.html
@@ -30,11 +30,6 @@
             </div>
             <div class="row" if.bind="stages.length > 0">
                 <ul class="listnav">
-                    <li class="${(!stageId ? 'active' : '')}">
-                        <a href="#" click.delegate="clicked(null)">
-                            Any
-                        </a>
-                    </li>
                     <li repeat.for="stage of stages" class="${(stageId === stage.id ? 'active' : '')}">
                         <a href="#" click.delegate="clicked(stage.id)">
                             <global-display global.bind="stage.global"></global-display>
@@ -46,6 +41,10 @@
             </div>
         </ux-dialog-body>
         <ux-dialog-footer>
+            <a click.delegate="clicked(null)" class="button _danger modal-action">
+                <i class="fa fa-fw fa-map-o"></i>
+                Unset
+            </a>
             <a click.delegate="cancel()" class="button modal-action">Cancel</a>
         </ux-dialog-footer>
     </ux-dialog>
