--- a/Source/TreasureGuide.Web/src/custom-elements/team-search.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/team-search.html
@@ -1,26 +1,29 @@
 <template>
     <form with.bind="searchModel">
-        <div class="row">
-            <stage-display editable="true" stage-id.bind="stageId"></stage-display>
-        </div>
-        <div class="row">
-            <div class="col s3">
-                <label>Captain:</label>
-                <unit-display unit-id.bind="leaderId" editable="true"></unit-display>
-            </div>
-            <div class="col s9">
-                <div class="row">
-                    <md-input md-label="Name" md-type="text" md-value.bind="term"></md-input>
+        <fieldset>
+            <legend>Search</legend>
+            <div class="row">
+                <div class="col m4">
+                    <label for="termInput">Term</label>
+                    <input id="termInput" type="text" value.bind="term" placeholder="My Nakama..." />
+                    <label for="stageInput">Stage</label>
+                    <stage-display id="stageInput" editable="true" stage-id.bind="stageId"></stage-display>
                 </div>
-                <div class="row">
-                    <div class="col s6">
-                        <md-checkbox md-checked.bind="global">Global</md-checkbox>
-                    </div>
-                    <div class="col s6">
-                        <md-checkbox md-checked.bind="freeToPlay">Free to Play</md-checkbox>
-                    </div>
+                <div class="col m4">
+                    <label for="unitInput">Captain</label>
+                    <unit-display id="unitInput" unit-id.bind="leaderId" editable="true"></unit-display>
+                </div>
+                <div class="col m4">
+                    <label for="globalCheckbox">
+                        <input id="globalCheckbox" type="checkbox" checked.bind="global" />
+                        Global
+                    </label>
+                    <label for="f2pCheckbox">
+                        <input id="f2pCheckbox" type="checkbox" checked.bind="freeToPlay" />
+                        Free to Play
+                    </label>
                 </div>
             </div>
-        </div>
+        </fieldset>
     </form>
 </template>
