--- a/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
@@ -78,16 +78,17 @@
             </div>
             <div class="row _alignCenter">
                 <div class="unit-collection">
-                    <button class="unit-button" click.delegate="clicked(null)">
-                        <i class="fa fa-fw fa-2x fa-user-times"></i>
-                    </button>
-                    <button repeat.for="unit of units" class="unit-button" click.delegate="clicked(unit.id)">
+                    <button repeat.for="unit of units" class="unit-button" size="large" click.delegate="clicked(unit.id)">
                         <img src.bind="getIcon(unit.id)" />
                     </button>
                 </div>
             </div>
         </ux-dialog-body>
         <ux-dialog-footer>
+            <a click.delegate="clicked(null)" class="button _danger modal-action">
+                <i class="fa fa-fw fa-user-times"></i>
+                Unset
+            </a>
             <a click.delegate="cancel()" class="button modal-action">Cancel</a>
         </ux-dialog-footer>
     </ux-dialog>
