--- a/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
+++ b/Source/TreasureGuide.Web/src/custom-elements/unit-picker.html
@@ -78,10 +78,13 @@
             </div>
             <div class="row _alignCenter">
                 <div class="unit-collection">
-                    <button repeat.for="unit of units" class="unit-button" size="large" click.delegate="clicked(unit.id)">
+                    <button repeat.for="unit of units" class="unit-button" size="medium" click.delegate="clicked(unit.id)">
                         <img src.bind="getIcon(unit.id)" />
                     </button>
                 </div>
+            </div>
+            <div class="row">
+                <search-pager search-model.bind="searchModel" result-count.bind="resultCount" bottom="true"></search-pager>
             </div>
         </ux-dialog-body>
         <ux-dialog-footer>
